[package]
name = "nloq"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/riddleandcode/nlsd"
documentation = "https://docs.rs/nloq/"
repository = "https://github.com/riddleandcode/nlsd"
description = "Natural Language Object Query"
keywords = ["natural-language", "parsing", "query"]
categories = ["parsing", ]

[features]
default = []

[dependencies]
nl-parser = { version = "0.1.0", path = "../parser" }
object-query = { version = "0.1.0", path = "../query" }
