[package]
name = "nlsd"
version = "0.1.2"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/riddleandcode/nlsd"
documentation = "https://docs.rs/nlsd/"
repository = "https://github.com/riddleandcode/nlsd"
description = "Natural Language Structured Documents"
keywords = ["natural-language", "serde", "parsing"]
categories = ["parsing"]

[features]
default = ["std"]
std = ["nl-parser/std", "serde/std", "num-traits/std"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc"] }
nl-parser = { version = "0.1.1", path = "../parser", default-features = false }

[dev-dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
