[package]
name = "nlsd-value"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
time = "0.2.16"
serde = "1.0.114"
object-query = { path = "../query" }

[dev-dependencies]
nlsd = { path = "../nlsd" }
serde = { version = "1", features = ["derive"] }
